--- a/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
+++ b/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
@@ -7,7 +7,7 @@
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
     <!--<script src="./java.js"></script>-->
     <script src="./org.kevoree.modeling.test.datastore-all.js"></script>
-    <script src="./org.kevoree.modeling.microframework.databases.websocket.js"></script>
+    <script src="./org.kevoree.modeling.database.websocket.WebSocket.js"></script>
 </head>
 <body>
 
@@ -53,7 +53,7 @@
             });
         } else {
             console.log(err);
-            err.printStackTrace()
+            err.printStackTrace();
         }
     });
 
