add task API for classic getter single and * fix the eachMyName to getMyName getter generation fix tests for the new version

--- a/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
+++ b/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
@@ -33,7 +33,7 @@
                     console.error("No root found.", results)
                 } else {
                     var lib = results[0];
-                    lib.eachShapes(function(shapes){
+                    lib.getShapes(function(shapes){
                         if(shapes != null) {
                             for(var i in shapes) {
                                 addShapeToDisplay(shapes[i]);
