--- a/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/elements/peerRTC/peerRTC.html
+++ b/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/elements/peerRTC/peerRTC.html
@@ -27,139 +27,104 @@
 
         <p>The <code>RTCPeerConnection</code> objects <code>localPeerConnection</code> and
             <code>remotePeerConnection</code> are in global scope, so you can inspect them in the console as well.</p>
-
-        <p>This modified code comes from a google public release with kind permission of Vikas Marwaha.</p>
     </template>
-
+    <script src="../../../js/adapter.js"></script>
     <script>
         Polymer({
-            localPeerConnection: "",
-            remotePeerConnection: "",
-            sendChannel: "",
-            receiveChannel: "",
+            /*  db = levelup('/does/not/matter', { db: require('memdown') })
+            memdown: require('../../../resources/memdown'),
+            db: levelup(memdown),
+            */
+            html5rocks: {},
+
+            id: null, /* Our unique ID */
+            sharedKey: null, /* Unique identifier for two clients to find each other */
+            remote: null, /* ID of the remote peer -- set once they send an offer */
+
+            /* Keep track of our connection state */
+            running: false,
+            /* Use Google's public servers for STUN
+             * STUN is a component of the actual WebRTC connection
+             * */
+            servers: {iceServers: [{url: 'stun:stun.l.google.com:19302'}]},
+
+            peerConnection: null, /* This is our WebRTC connection */
+            dataChannel: null, /* This is our outgoing data channel within WebRTC */
 
             ready: function () {
+                /* Generate this browser a unique ID */
+                this.id = Math.random().toString().replace('.', '');
+                /* Unique identifier for two clients, They MUST share this to find each other
+                * Each peer waits in the announcement channel to find its matching identifier
+                * When it finds its matching identifier, it initiates a WebRTC offer with that client.
+                * This unique identifier can be pretty much anything in practice.
+                */
+                this.sharedKey = prompt("Please enter a shared identifier");
+
+                //adaptator.setRTCValues();
+                //var announceChannel = this.handleAnnounceChannelMessage;
+                //var signalChannel = this.handleSignalChannelMessage;
+
+                /* Send a message to the announcement channel
+                * If our partner is already waiting, they will send us a WebRTC offer
+                * over signalling channel and we can begin delegating WebRTC
+                */
+                this.sendAnnounceChannelMessage();
             },
-
-            trace: function (text) {
-                console.log((window.performance.now() / 1000).toFixed(3) + ': ' + text);
-            },
-
-            createConnection: function () {
-                var servers = null;
-                this.localPeerConnection = new webkitRTCPeerConnection(servers, {optional: [{RtpDataChannels: true}]});
-                this.trace('Created local peer connection object localPeerConnection');
-
-                try {
-                    // Reliable Data Channels not yet supported in Chrome
-                    this.sendChannel = this.localPeerConnection.createDataChannel('sendDataChannel', {reliable: false});
-                    this.trace('Created send data channel');
-                } catch (e) {
-                    alert('Failed to create data channel. ' + 'You need Chrome M25 or later with RtpDataChannel enabled');
-                    this.trace('createDataChannel() failed with exception: ' + e.message);
-                }
-                this.localPeerConnection.onicecandidate = this.gotLocalCandidate.bind( this );
-                this.sendChannel.onopen = this.handleSendChannelStateChange.bind( this );
-                this.sendChannel.onclose = this.handleSendChannelStateChange.bind( this );
-
-                this.remotePeerConnection = new webkitRTCPeerConnection(servers, {optional: [{RtpDataChannels: true}]});
-                this.trace('Created remote peer connection object remotePeerConnection');
-                this.remotePeerConnection.onicecandidate = this.gotRemoteIceCandidate.bind( this );
-                this.remotePeerConnection.ondatachannel = this.gotReceiveChannel.bind( this );
-
-                this.localPeerConnection.createOffer( this.gotLocalDescription.bind( this ) );
-                this.$.startButton.disabled = true;
-                this.$.closeButton.disabled = false;
-            },
-
-            sendData: function () {
-                var data = this.$.dataChannelSend.value;
-                this.sendChannel.send(data);
-                this.trace('Sent data: ' + data);
-            },
-
-            closeDataChannels: function () {
-                this.trace('Closing data channels');
-                this.sendChannel.close();
-                this.trace('Closed data channel with label: ' + this.sendChannel.label);
-                this.receiveChannel.close();
-                this.trace('Closed data channel with label: ' + this.receiveChannel.label);
-                this.localPeerConnection.close();
-                this.remotePeerConnection.close();
-                this.localPeerConnection = null;
-                this.remotePeerConnection = null;
-                this.trace('Closed peer connections');
-                this.$.startButton.disabled = false;
-                this.$.sendButton.disabled = true;
-                this.$.closeButton.disabled = true;
-                this.$.dataChannelSend.value = '';
-                this.$.dataChannelReceive.value = '';
-                this.$.dataChannelSend.disabled = true;
-                this.$.dataChannelSend.placeholder = 'Press Start, enter some text, then press Send.';
-            },
-
-            gotLocalDescription: function (desc) {
-                this.localPeerConnection.setLocalDescription( desc );
-                this.trace('Offer from localPeerConnection \n' + desc.sdp);
-                this.remotePeerConnection.setRemoteDescription(desc);
-                this.remotePeerConnection.createAnswer( this.gotRemoteDescription.bind(this) );
-            },
-
-            gotRemoteDescription: function (desc) {
-                this.remotePeerConnection.setLocalDescription(desc);
-                this.trace('Answer from remotePeerConnection \n' + desc.sdp);
-                this.localPeerConnection.setRemoteDescription(desc);
-            },
-
-            gotLocalCandidate: function (event) {
-                this.trace('local ice callback');
-                if (event.candidate) {
-                    this.remotePeerConnection.addIceCandidate(event.candidate);
-                    this.trace('Local ICE candidate: \n' + event.candidate.candidate);
+            // Handle an incoming message on the announcement channel
+            handleAnnounceChannelMessage: function (snapshot) {
+                var message = snapshot.val();
+                if (message.id != id && message.sharedKey == sharedKey) {
+                    console.log('Discovered matching announcement from ' + message.id);
+                    this.remote = message.id;
+                    this.initiateWebRTCState();
+                    //this.connect();
                 }
             },
-
-            gotRemoteIceCandidate: function (event) {
-                this.trace('remote ice callback');
-                if (event.candidate) {
-                    this.localPeerConnection.addIceCandidate(event.candidate);
-                    this.trace('Remote ICE candidate: \n ' + event.candidate.candidate);
-                }
+            // This is the general handler for a message from our remote client
+            // Determine what type of message it is, and call the appropriate handler
+            handleSignalChannelMessage: function (snapshot) {
+                var message = snapshot.val();
+                var sender = message.sender;
+                var type = message.type;
+                console.log('Received a \'' + type + '\' signal from ' + sender);
+                //if (type == 'offer') handleOfferSignal(message);
+                //else if (type == 'answer') handleAnswerSignal(message);
+                //else if (type == 'candidate' && running) handleCandidateSignal(message);
             },
-
-            gotReceiveChannel: function (event) {
-                this.trace('Receive Channel Callback');
-                this.receiveChannel = event.channel;
-                this.receiveChannel.onmessage = this.handleMessage.bind( this );
-                this.receiveChannel.onopen = this.handleReceiveChannelStateChange.bind( this );
-                this.receiveChannel.onclose = this.handleReceiveChannelStateChange.bind( this );
+            // Announce our arrival to the announcement channel
+            sendAnnounceChannelMessage: function () {
+                this.db.put(this.sharedKey, this.id, function (err) {
+                    if (err) { // some kind of I/O error
+                        return console.log('Ooops! Put didn\'t work', err);
+                    }
+                });
+                this.db.remove(function () {
+                    this.db.push({sharedKey: sharedKey, id: id});
+                });
+                console.log('Announced our sharedKey is ' + sharedKey);
+                console.log('Announced our ID is ' + id);
             },
-
-            handleMessage: function (event) {
-                this.trace('Received message: ' + event.data);
-                this.$.dataChannelReceive.value = event.data;
+            // Function to initiate the WebRTC peerconnection and dataChannel
+            initiateWebRTCState: function () {
+                //adaptator.trace('Created remote peer connection object peerConnection');
+                this.peerConnection = new webkitRTCPeerConnection(servers);//new adaptator.RTCPeerConnection(servers, pcConstraint);
+                //this.peerConnection.ondatachannel = handleDataChannel;
+                this.dataChannel = peerConnection.createDataChannel('myDataChannel');
+                //this.dataChannel.onmessage = handleDataChannelMessage;
+                //this.dataChannel.onopen = handleDataChannelOpen;
             },
-
-            handleSendChannelStateChange: function () {
-                var readyState = this.sendChannel.readyState;
-                this.trace('Send channel state is: ' + readyState);
-                if (readyState === 'open') {
-                    this.$.dataChannelSend.disabled = false;
-                    this.$.dataChannelSend.focus();
-                    this.$.dataChannelSend.placeholder = '';
-                    this.$.sendButton.disabled = false;
-                    this.$.closeButton.disabled = false;
-                } else {
-                    this.$.dataChannelSend.disabled = true;
-                    this.$.sendButton.disabled = true;
-                    this.$.closeButton.disabled = true;
-                }
-            },
-
-            handleReceiveChannelStateChange: function () {
-                var readyState = this.receiveChannel.readyState;
-                this.trace('Receive channel state is: ' + readyState);
+            // Function to offer to start a WebRTC connection with a peer
+            connect: function () {
+                this.running = true;
+                //this.startSendingCandidates();
+                this.peerConnection.createOffer( function ( sessionDescription ) {
+                    console.log('Sending offer to ' + remote);
+                    this.peerConnection.setLocalDescription( sessionDescription );
+                    //this.sendSignalChannelMessage( sessionDescription );
+                });
             }
+
         });
     </script>
 </polymer-element>
