In the path to implement the signaling server

--- a/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/elements/peerRTC/peerRTCchrome.html
+++ b/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/elements/peerRTC/peerRTCchrome.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../../resources/bower_components/polymer/polymer.html">
 
-<polymer-element name="peer-rtc">
+<polymer-element name="peer-rtc-chrome">
     <template>
         <link rel="stylesheet" href="peerRTC.css">
 
