--- a/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/index.html
+++ b/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/index.html
@@ -16,13 +16,14 @@
 
     <script src="../resources/bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="stylesheet" href="core-page.css">
+    <link rel="import" href="elements/peerRTC/peerRTCchrome.html">
     <link rel="import" href="elements/peerRTC/peerRTC.html">
 </head>
 <body unresolved>
 
-<div class="container" layout vertical center>
-    <peer-rtc></peer-rtc>
-</div>
+<!--div class="container" layout vertical center>
+    <peer-rtc-chrome></peer-rtc-chrome>
+</div-->
 <div class="container" layout vertical center>
     <peer-rtc></peer-rtc>
 </div>
