--- a/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/elements/peerRTC/peerRTC.html
+++ b/databases/org.kevoree.modeling.microframework.databases.webrtc/src/main/html/elements/peerRTC/peerRTC.html
@@ -29,14 +29,9 @@
             <code>remotePeerConnection</code> are in global scope, so you can inspect them in the console as well.</p>
     </template>
     <script src="../../../js/adapter.js"></script>
+    <script src="../../../js/dbIndexed.js"></script>
     <script>
         Polymer({
-            /*  db = levelup('/does/not/matter', { db: require('memdown') })
-            memdown: require('../../../resources/memdown'),
-            db: levelup(memdown),
-            */
-            html5rocks: {},
-
             id: null, /* Our unique ID */
             sharedKey: null, /* Unique identifier for two clients to find each other */
             remote: null, /* ID of the remote peer -- set once they send an offer */
@@ -51,117 +46,193 @@
             peerConnection: null, /* This is our WebRTC connection */
             dataChannel: null, /* This is our outgoing data channel within WebRTC */
 
+            annEV: new Event("on-announce"),
+            signalEV: new Event("on-signal"),
+
             ready: function () {
-                this.html5rocks.indexedDB = {};
-                this.html5rocks.indexedDB.db = null;
+                html5rocks.indexedDB.open();
+                adaptator.adapteRTCapi();
 
-                this.html5rocks.indexedDB.open = function() {
-                    var version = 1;
-                    var request = this.indexedDB.open("signaling", version);
-
-                    // We can only create Object stores in a versionchange transaction.
-                    request.onupgradeneeded = function(e) {
-                        var db = e.target.result;
-                        // A versionchange transaction is started automatically.
-                        e.target.transaction.onerror = this.html5rocks.indexedDB.onerror;
-                        if(db.objectStoreNames.contains("signal")) {
-                            db.deleteObjectStore("signal");
-                        }
-                        var store = db.createObjectStore("signal",
-                                {keyPath: "sharedKey"});
-                    };
-                    request.onsuccess = function(e) {
-                        this.html5rocks.indexedDB.db = e.target.result;
-                        this.html5rocks.indexedDB.getAllTodoItems();
-                    };
-                    request.onerror = this.html5rocks.indexedDB.onerror;
-                };
-/*
-                // Which we then observe
-                Object.observe(this.html5rocks.indexedDB.db, function(changes){
-                    // This asynchronous callback runs
-                    changes.forEach(function(change) {
-                        // Letting us know what changed
-                        console.log(change.type, change.name, change.oldValue);
-                    });
-                });
-*/
                 /* Generate this browser a unique ID */
                 this.id = Math.random().toString().replace('.', '');
                 /* Unique identifier for two clients, They MUST share this to find each other
-                * Each peer waits in the announcement channel to find its matching identifier
-                * When it finds its matching identifier, it initiates a WebRTC offer with that client.
-                * This unique identifier can be pretty much anything in practice.
-                */
+                 * Each peer waits in the announcement channel to find its matching identifier
+                 * When it finds its matching identifier, it initiates a WebRTC offer with that client.
+                 * This unique identifier can be pretty much anything in practice.
+                 */
                 this.sharedKey = prompt("Please enter a shared identifier");
-
-                //adaptator.setRTCValues();
-                //var announceChannel = this.handleAnnounceChannelMessage;
-                //var signalChannel = this.handleSignalChannelMessage;
-
                 /* Send a message to the announcement channel
-                * If our partner is already waiting, they will send us a WebRTC offer
-                * over signalling channel and we can begin delegating WebRTC
-                */
+                 * If our partner is already waiting, they will send us a WebRTC offer
+                 * over signalling channel and we can begin delegating WebRTC
+                 */
                 this.sendAnnounceChannelMessage();
-            },
 
-            // Handle an incoming message on the announcement channel
-            handleAnnounceChannelMessage: function (snapshot) {
-                var message = snapshot.val();
-                if (message.id != id && message.sharedKey == sharedKey) {
-                    console.log('Discovered matching announcement from ' + message.id);
-                    this.remote = message.id;
-                    this.initiateWebRTCState();
-                    //this.connect();
-                }
-            },
-            // This is the general handler for a message from our remote client
-            // Determine what type of message it is, and call the appropriate handler
-            handleSignalChannelMessage: function (snapshot) {
-                var message = snapshot.val();
-                var sender = message.sender;
-                var type = message.type;
-                console.log('Received a \'' + type + '\' signal from ' + sender);
-                //if (type == 'offer') handleOfferSignal(message);
-                //else if (type == 'answer') handleAnswerSignal(message);
-                //else if (type == 'candidate' && running) handleCandidateSignal(message);
+                document.addEventListener("on-signal", this.handleSignalChannelMessage);
+                document.addEventListener("on-announce", this.handleAnnounceChannelMessage);
             },
             // Announce our arrival to the announcement channel
             sendAnnounceChannelMessage: function () {
-                var db = this.html5rocks.indexedDB.db;
-                var trans = db.transaction(["signal"], "readwrite");
-                var store = trans.objectStore("signal");
-                var request = store.put({
-                    "id": id,
-                    "sharedKey" : sharedKey
-                });
-                console.log('Announced our sharedKey is ' + sharedKey);
-                console.log('Announced our ID is ' + id);
+                html5rocks.indexedDB.sendAnnounce(this.id, this.sharedKey);
+                // Dispatch the event.
+                document.dispatchEvent(this.annEV);
+            },
+            // Handle an incoming message on the announcement channel
+            handleAnnounceChannelMessage: function () {
+                var message = html5rocks.indexedDB.getAnnounce(this.sharedKey);
+                if (message.id != this.id && message.sharedKey == this.sharedKey) {
+                    console.log('Discovered matching announcement from ' + message.id);
+                    this.remote = message.id;
+                    this.initiateWebRTCState();
+                    this.connect();
+                }
             },
             // Function to initiate the WebRTC peerconnection and dataChannel
             initiateWebRTCState: function () {
-                //adaptator.trace('Created remote peer connection object peerConnection');
-                this.peerConnection = new webkitRTCPeerConnection(servers);//new adaptator.RTCPeerConnection(servers, pcConstraint);
-                //this.peerConnection.ondatachannel = handleDataChannel;
-                this.dataChannel = peerConnection.createDataChannel('myDataChannel');
-                //this.dataChannel.onmessage = handleDataChannelMessage;
-                //this.dataChannel.onopen = handleDataChannelOpen;
+                var channelSCTP = true, channelRTP = false;
+                var pcConstraint = null;
 
+                if (channelSCTP) {
+                    // SCTP is supported from Chrome 31 and is supported in FF.
+                    // No need to pass DTLS constraint as it is on by default in Chrome 31.
+                    // For SCTP, reliable and ordered is true by default.
+                    adaptator.trace('Using SCTP based data channels');
+                } else {
+                    pcConstraint = {
+                        optional: [{RtpDataChannels: true}]
+                    };
+                    if (!channelRTP) {
+                        // Use RTP data channels for Chrome versions older than 31.
+                        adaptator.trace('Using RTP based data channels, as you are on an older version than 31.');
+                        channnelRTP = true;
+                    }
+                }
+                adaptator.trace('Created remote peer connection object peerConnection');
+                this.peerConnection = new RTCPeerConnection(servers, pcConstraint);
+                this.peerConnection.ondatachannel = this.handleDataChannel;
 
-
+                this.dataChannel = this.peerConnection.createDataChannel('myDataChannel');
+                this.dataChannel.onmessage = this.handleDataChannelMessage;
+                this.dataChannel.onopen = this.handleDataChannelOpen;
+            },
+            /* == Data Channel Functions ==
+             * The WebRTC connection is established by the time these functions run
+             * The hard part is over, and these are the functions we really want to use
+             *
+             * The functions below relate to sending and receiving WebRTC messages over
+             * the peer-to-peer data channels
+             */
+            // This is our receiving data channel event
+            // We receive this channel when our peer opens a sending channel
+            // We will bind to trigger a handler when an incoming message happens
+            handleDataChannel: function (event) {
+                event.channel.onmessage = this.handleDataChannelMessage;
+            },
+            // This is called on an incoming message from our peer
+            // You probably want to overwrite this to do something more useful!
+            handleDataChannelMessage: function (event) {
+                console.log('Recieved Message: ' + event.data);
+                this.$.dataChannelReceive.value = event.data;
+            },
+            // This is called when the WebRTC sending data channel is officially 'open'
+            handleDataChannelOpen: function () {
+                console.log('Data channel created! Hello! I am ' + id);
+            },
+            // Called when the data channel has closed
+            handleDataChannelClosed: function () {
+                console.log('The data channel has been closed!');
             },
             // Function to offer to start a WebRTC connection with a peer
             connect: function () {
                 this.running = true;
-                //this.startSendingCandidates();
-                this.peerConnection.createOffer( function ( sessionDescription ) {
+                this.startSendingCandidates();
+                this.peerConnection.createOffer(function (sessionDescription) {
                     console.log('Sending offer to ' + remote);
                     this.peerConnection.setLocalDescription( sessionDescription );
-                    //this.sendSignalChannelMessage( sessionDescription );
+                    this.sendSignalChannelMessage( sessionDescription );
                 });
+            },
+            /* == Signal Channel Functions ==
+             * The signal channels are used to delegate the WebRTC connection between
+             * two peers once they have found each other via the announcement channel.
+             *
+             * This is done on Firebase as well. Once the two peers communicate the
+             * necessary information to 'find' each other via WebRTC, the signalling
+             * channel is no longer used and the connection becomes peer-to-peer.
+             */
+            sendSignalChannelMessage: function(message) {
+                message.sender = id;
+                html5rocks.indexedDB.sendSignal( this.sharedKey, message );
+                // Dispatch the event.
+                document.dispatchEvent(this.signalEV);
+            },
+            // This is the general handler for a message from our remote client
+            // Determine what type of message it is, and call the appropriate handler
+            handleSignalChannelMessage: function () {
+                var message = html5rocks.indexedDB.getSignal( this.sharedKey );
+                var sender = message.sender;
+                var type = message.type;
+                console.log('Received a \'' + type + '\' signal from ' + sender);
+                if (type == 'offer') this.handleOfferSignal(message);
+                else if (type == 'answer') this.handleAnswerSignal(message);
+                else if (type == 'candidate' && running) this.handleCandidateSignal(message);
+            },
+            // Handle a WebRTC offer request from a remote client
+            handleOfferSignal: function (message) {
+                this.running = true;
+                this.remote = message.sender;
+                this.initiateWebRTCState();
+                this.startSendingCandidates();
+                this.peerConnection.setRemoteDescription(new RTCSessionDescription(message));
+                this.peerConnection.createAnswer(function (sessionDescription) {
+                    console.log('Sending answer to ' + message.sender);
+                    this.peerConnection.setLocalDescription(sessionDescription);
+                    this.sendSignalChannelMessage(sessionDescription);
+                });
+            },
+            // Handle a WebRTC answer response to our offer we gave the remote client
+            handleAnswerSignal: function (message) {
+                this.peerConnection.setRemoteDescription(new RTCSessionDescription(message));
+            },
+            // Handle an ICE candidate notification from the remote client
+            handleCandidateSignal: function (message) {
+                var candidate = new RTCIceCandidate(message);
+                this.peerConnection.addIceCandidate( candidate );
+            },
+            /* == ICE Candidate Functions ==
+             * ICE candidates are what will connect the two peers
+             * Both peers must find a list of suitable candidates and exchange their list
+             * We exchange this list over the signalling channel (Firebase)
+             */
+            // Add listener functions to ICE Candidate events
+            startSendingCandidates: function () {
+                this.peerConnection.oniceconnectionstatechange = this.handleICEConnectionStateChange;
+                this.peerConnection.onicecandidate = this.handleICECandidate;
+            },
+            // This is how we determine when the WebRTC connection has ended
+            // This is most likely because the other peer left the page
+            handleICEConnectionStateChange: function () {
+                if (this.peerConnection.iceConnectionState == 'disconnected') {
+                    console.log('Client disconnected!');
+                    this.sendAnnounceChannelMessage();
+                }
+            },
+            // Handle ICE Candidate events by sending them to our remote
+            // Send the ICE Candidates via the signal channel
+            handleICECandidate: function (event) {
+                var candidate = event.candidate;
+                if (candidate) {
+                    candidate.type = 'candidate';
+                    console.log('Sending candidate to ' + remote);
+                    this.sendSignalChannelMessage(candidate);
+                } else {
+                    console.log('All candidates sent');
+                }
+            },
+            sendData: function () {
+                var data = this.$.dataChannelSend.value;
+                this.dataChannel.send(data);
+                adaptator.trace('Sent data: ' + data);
             }
-
         });
     </script>
 </polymer-element>
