--- a/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
+++ b/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
@@ -13,6 +13,7 @@
 
 <button id="addNewShapeButton">AddNewShape</button>
 
+<div id="shapesContainer"></div>
 
 <script>
 
@@ -33,23 +34,17 @@
                     console.error("No root found.", results)
                 } else {
                     var lib = root;
-                    lib.getShapes().then(function(shapes){
-                        if(shapes != null) {
-                            for(var i in shapes) {
-                                addShapeToDisplay(shapes[i]);
-                            }
-                        } else {
-                            console.error("No shapes found");
-                        }});
+                    displayShapes(lib);
 
-                    dimension.listen(function(event){
-                        console.log(event);
+                    lib.listen(function(source, metas) {
+                        console.log(source, metas);
+                        displayShapes(source);
                         /*
-                        if(event.actionType() == org.kevoree.modeling.api.KActionType.ADD && event.metaClass() == lib.metaClass() && event.metaElement() == lib.metaClass().metaReference("shapes")) {
-                            console.log(event.value());
-                            addShapeToDisplay(event.value());
-                        }
-                        */
+                         if(event.actionType() == org.kevoree.modeling.api.KActionType.ADD && event.metaClass() == lib.metaClass() && event.metaElement() == lib.metaClass().metaReference("shapes")) {
+                         console.log(event.value());
+                         addShapeToDisplay(event.value());
+                         }
+                         */
                     });
                     console.log("Yeah go ahead !")
                 }
@@ -60,14 +55,23 @@
         }
     });
 
-    function addShapeToDisplay(shape) {
-        $('<div id="'+shape.getName()+'" style="height:50px;width:50px;display: inline-block; margin: 10px;background-color: '+shape.getColor()+';"></div>').appendTo($('body'));
-        shape.listen(function(event){
-            console.log(event);
-            if(event.metaElement() == shape.metaClass().metaAttribute("color")) {
-                $('div#' + shape.getName()).css('background-color', event.value());
-            }
-        });
+    function displayShapes(lib) {
+
+        var shapesContainer = $('#shapesContainer');
+
+        lib.getShapes().then(function(shapes){
+            if(shapes != null) {
+                for(var i in shapes) {
+                    if(shapesContainer.find('div#'+ shapes[i].getName()).length == 0) {
+                        $('<div id="'+shapes[i].getName()+'" style="height:50px;width:50px;display: inline-block; margin: 10px;background-color: '+shapes[i].getColor()+';"></div>').appendTo(shapesContainer);
+                        shapes[i].listen(function(newShape){
+                            $('div#' + newShape.getName()).css('background-color', newShape.getColor());
+                        });
+                    }
+                }
+            } else {
+                console.error("No shapes found");
+            }});
     }
 
     $('#addNewShapeButton').on('click', addNewShape);
